[tool.poetry]
name = "tennis-simulator"
version = "0.1.0"
description = "A web-based tennis match simulator using real player statistics"
authors = ["Tennis Simulator <tennis@simulator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-socketio = "^5.3.6"
pandas = "^2.1.1"
numpy = "^1.24.3"
python-socketio = "^5.9.0"
eventlet = "^0.33.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"