[project]
name = "tennis-simulator"
version = "1.0.0"
description = "Monte Carlo tennis match simulator using real player statistics"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
